tests/compile-fail/integration_suite__integration__mapfiles__abi_multiple_o.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad signature: signature has multiple 'o' args
  ┌─ <mapfile>:3:5
  │
3 │ 300 oot
  │     ^^^ signature has multiple 'o' args


